<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <se.mau.mattiasjonsson.p1.HeaderTextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome" />

        <Button
            android:id="@+id/btnIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/income" />

        <Button
            android:id="@+id/btnExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expenses" />

        <Button
            android:id="@+id/btnBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewBudget" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/camera" />

    </LinearLayout>

</FrameLayout>