<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/loginFragment"
    tools:context=".fragments.LoginFragment">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <se.mau.mattiasjonsson.p1.HeaderTextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/tvLoginName"
            android:text="@string/loginName"/>

        <EditText
            android:id="@+id/etLoginFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etLoginLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </LinearLayout>

</FrameLayout>